# CarlaLLM

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
dependency/: dependencies.py  dependency_manager.py
src/: main.py
src/training_data_retriever/: training_data_retriever_abc.py  wikipedia_article_name_retriever.py  wikipedia_articles_retriever.py  wikipedia_link_retriever.py
training_data_retriever/: errors.py  training_data_retriever_abc.py
tst/test_training_data_retriever/: test_wikipedia_article_name_retriever.py  test_wikipedia_articles_retriever.py  test_wikipedia_link_retriever.py
