[tool.poetry]
name = "carlallm"
version = "0.1.0"
description = ""
authors = ["Carla Prieto <carlapchavez@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
assertpy = "^1.1"
requests-mock = "^1.12.1"

[tool.pytest.ini_options]
pythonpath = "src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
